news email setup.

--- a/config/enumerations.yml
+++ b/config/enumerations.yml
@@ -45,6 +45,7 @@
     AddPurchase: 21
     FeedbackOffer: 22
     Invite: 23
+    News: 24
   FeedShowSource:
     Login: 'login'
   FollowingSource:
