email connection interface.

--- a/config/enumerations.yml
+++ b/config/enumerations.yml
@@ -46,6 +46,10 @@
     FeedbackOffer: 22
     Invite: 23
     News: 24
+  EmailProvider:
+    Gmail: 0
+    Yahoo: 1
+    Hotmail: 2
   FeedShowSource:
     Login: 'login'
   FollowingSource:
