--- a/config/enumerations.yml
+++ b/config/enumerations.yml
@@ -70,6 +70,9 @@
     Logout: 'logout'
     FBDenied: 'fb_denied'
     TWDenied: 'tw_denied'
+  PurchaseSource:
+    Client: 0
+    Email: 1
   PurchaseEditSource:
     Updated: 'updated'
   NotificationIdentifier:
