stub resource for notifications.

--- a/config/enumerations.yml
+++ b/config/enumerations.yml
@@ -79,6 +79,7 @@
     Like: 0
     Comment: 1
     Following: 2
+    UnapprovedPurchases: 3
   SettingsIndexSource:
     Updated: 'updated'
   ShoppingSource:
