shortened itunes link

--- a/config/config.yml
+++ b/config/config.yml
@@ -43,7 +43,7 @@ common: &common
     - R7vHWBzVZRXmiDEs59Vs8L9EMr532waNEnLKZFsM
   :iphone_encryption_phrase: f0837530983794e3
   :iphone_salt: 20988410f43fa368
-  :ios_app_link: https://itunes.apple.com/us/app/mine./id567558757
+  :ios_app_link: http://itun.es/us/Lje1H.i
   :fb_app_id: 245230762190915
   :fb_app_secret: 57066dc5c99bfed96f6e24496cc49815
   :fb_app_token: 245230762190915|FCdWaSQb3KYtAIuxfBtODKf_nww
