health report tracking for auto unsubscribe

--- a/config/enumerations.yml
+++ b/config/enumerations.yml
@@ -78,6 +78,7 @@
     PurchasesImportedReminder: 14
     AfterJoinRunImporter: 15
     AfterJoinDownloadApp: 16
+    Unsubscribe: 17
   HomeShowSource:
     UserCreateError: 'user_create_error'
     LoginError: 'login_error'
